--- a/css/style.css
+++ b/css/style.css
@@ -78,47 +78,11 @@
     gap: clamp(0.8rem, 3vw, 2rem);
     justify-content: center;
     padding-top: 2rem;
-}
-
-
-@media (min-width: 820px) {
-
-    /* 큰 화면(6개) */
-    .services-button {
-        grid-template-columns: repeat(5, 1fr);
-    }
-}
-
-@media (max-width: 819.98px) {
-
-    /* 작은 화면(3개) */
-    .services-button {
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-
-@media (max-width:400px) {
-    .services-title {
-        font-size: 0.8rem;
-    }
-
-    .services-button img {
-        max-width: 90px;
-    }
-
-    .text2-text {
-        font-size: 0.8rem;
-    }
-}
-
-@media (min-width:401px) and (max-width:480px) {
-    .services-button img {
-        max-width: 100px;
-    }
+    grid-template-columns: repeat(5, 1fr);
 }
 
 .service-item img {
-    width: 120px;
+    width: 8vw;
     height: auto;
     transition: transform 0.3s ease;
 }
@@ -126,6 +90,43 @@
 .service-item img:hover {
     transform: scale(1.05);
 }
+
+/* @media (min-width: 820px) {
+
+    큰 화면(6개)
+    .services-button {
+        grid-template-columns: repeat(5, 1fr);
+    }
+} */
+
+/* @media (max-width: 819.98px) {
+
+    작은 화면(3개)
+    .services-button {
+        grid-template-columns: repeat(3, 1fr);
+    }
+} 
+*/
+
+@media (max-width:400px) {
+    .services-title {
+        font-size: 0.8rem;
+    }
+
+    .text2-text {
+        font-size: 0.8rem;
+    }
+}
+
+@media (max-width: 900px) {
+    .services-button {
+        width: 80%;
+    }
+    .service-item img{
+        width: 10vw;
+    }
+}
+
 
 /*text*/
 .italic {
