--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@
 
 .services-button {
     display: grid;
-    gap: clamp(0.8rem, 4vw, 4rem);
+    gap: clamp(0.8rem, 6vw, 6rem);
     justify-content: center;
     padding-top: 3rem;
     grid-template-columns: repeat(5, 1fr);
@@ -83,6 +83,8 @@
 
 .service-item img {
     width: 6vw;
+    max-width: 130px;
+    min-width: 100px;
     height: auto;
     transition: transform 0.3s ease;
 }
@@ -118,12 +120,13 @@
     }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
     .services-button {
         width: 80%;
     }
     .service-item img{
         width: 10vw;
+        min-width: 0;
     }
 }
 
