nav, carousel, service버튼 클릭 시 파란 배경 제거

--- a/css/nav.css
+++ b/css/nav.css
@@ -1,4 +1,4 @@
-html{
+html {
     scroll-behavior: smooth;
 }
 
@@ -61,6 +61,11 @@ html{
     border: none;
     color: rgb(0, 0, 0);
     transition: color 0.5s ease;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.navToggle:hover {
+    background-color: #ffffff00;
 }
 
 
@@ -100,7 +105,7 @@ html{
 
     .nav-link a {
         color: #ffffff;
-
+        -webkit-tap-highlight-color: transparent;
     }
 
     .navToggle {
