--- a/css/carousel.css
+++ b/css/carousel.css
@@ -33,15 +33,17 @@
 }
 
 .carousel-button button {
-    color: rgb(170, 170, 170);
+    color: rgb(237, 237, 237);
     background-color: rgba(0, 0, 0, 0);
     border: none;
-    font-size: 3rem;
+    font-size: 4vw;
     font-weight: bold;
     cursor: pointer;
-    border-radius: 0;
+    border-radius: 0;       
+    -webkit-tap-highlight-color: transparent;
 }
 
 .carousel-button button:hover {
-    color: rgb(98, 98, 98);
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(145, 145, 145);
 }
