--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 
 /*describe*/
 .describe-title {
-    background-color: #3a4af3fb;
+    background-color: #1c76c8;
     color: white;
     width: 100%;
     padding: 1em 0em;
@@ -78,6 +78,7 @@
     gap: clamp(0.8rem, 6vw, 6rem);
     justify-content: center;
     padding-top: 3rem;
+    -webkit-tap-highlight-color: transparent;
     grid-template-columns: repeat(5, 1fr);
 }
 
@@ -85,7 +86,7 @@
     width: 6vw;
     max-width: 130px;
     min-width: 100px;
-    height: auto;
+    height: auto;     
     transition: transform 0.3s ease;
 }
 
