--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,18 @@
     margin: 0 auto;
 }
 
+/*main*/
+.container-main {
+    position: relative;
+    width: 100%;
+}
+
+.main-img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
 /*describe*/
 .describe-title {
     background-color: #1c76c8;
