--- a/css/nav.css
+++ b/css/nav.css
@@ -6,7 +6,7 @@ html {
     position: fixed;
     right: 0;
     left: 0;
-    padding: 1.2rem;
+    padding: 1.2rem 2rem 1.2rem 1.2rem;
     width: 100%;
     z-index: 1;
     background-color: transparent;
@@ -70,8 +70,7 @@ html {
     transition: color 0.5s ease;
     -webkit-tap-highlight-color: transparent;
     height: 0;
-    padding-top: 0;
-    padding-bottom: 0;
+    padding: 0 15px 0 0;
 }
 
 .navToggle:hover {
