--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,36 @@
     font-size: clamp(0.5rem, 4.5vw, 2rem);
     font-weight: 600;
 } */
+/*text*/
+.text {
+    /*
+    width: 30vw;
+    max-width: 500px;
+    min-width: 100px;
+    height: auto;
+    */
+    font-weight: bold;
+    color: #2e3d86;
+    font-size: clamp(1.0rem, 4.5vw, 5rem);
+    text-align: center;
+    margin-bottom: 2vw;
+}
+
+.phone-btn {
+    display: inline-block;
+    background-color: #4a9bd6;        /* 파란색 */
+    color: white;                     /* 흰색 글자 */
+    font-weight: bold;               /* 굵은 글씨 */
+    font-size: clamp(1.0rem, 4.5vw, 5rem);               /* 글자 크기 */
+    padding: 0.8rem 2.5rem 0.6rem 2.5rem;          /* 위아래, 좌우 여백 */
+    border: none;
+    border-radius: 999px;            /* pill 모양 (양 끝 둥글게) */
+    text-align: center;
+    text-decoration: none;           /* 밑줄 제거 */
+    white-space: nowrap;            /* 한 줄 유지 */
+    transition: background-color 0.3s ease;
+    box-shadow: 0 6px 12px #4b4b4bb3;
+  }
 
 /*services*/
 .services-title {
@@ -185,6 +215,22 @@
 }
 
 /*example*/
+.blog-button {
+    display: inline-block;
+    background-color: #4a9bd6;        /* 파란색 */
+    color: white;                     /* 흰색 글자 */
+    font-weight: bold;               /* 굵은 글씨 */
+    font-size: clamp(1.0rem, 2.6vw, 2rem);               /* 글자 크기 */
+    padding: 0.8rem 2.5rem 0.6rem 2.5rem;          /* 위아래, 좌우 여백 */
+    border: none;
+    border-radius: 999px;            /* pill 모양 (양 끝 둥글게) */
+    text-align: center;
+    text-decoration: none;           /* 밑줄 제거 */
+    white-space: nowrap;            /* 한 줄 유지 */
+    transition: background-color 0.3s ease;
+    box-shadow: 0 6px 12px #4b4b4bb3;
+  }
+
 .example-img {
     width: 90%;
     display: grid;
@@ -216,20 +262,6 @@
     font-size: clamp(0.9rem, 5vw, 1.8rem);
     font-weight: 500;
 }
-
-a.btn {
-    display: inline-block;
-    padding: 0.5rem 1rem;
-    background-color: #2e3d86; /* Bootstrap success 색 */
-    color: white;
-    border-radius: 0.25rem;
-    text-decoration: none;
-    font-weight: 600;
-  }
-  
-  a.btn:hover {
-    background-color: #212c61; /* 약간 더 어두운 초록색 */
-  }
 
 /*text2*/
 .text2-img {
