--- a/css/carousel.css
+++ b/css/carousel.css
@@ -39,6 +39,7 @@
     font-size: 4vw;
     font-weight: bold;
     cursor: pointer;
+    padding:12px 5px;
     border-radius: 0;       
     -webkit-tap-highlight-color: transparent;
 }
